css/privacy.css
body {
    margin-top: 90px;
  }

  article {
   margin: 10px;
  }


    .navbar {
      justify-content: space-between;
      display: flex;
    }

    .nav-toggle {
        display: block;
        cursor: pointer;
    }

    .nav-menu.show {
        display: flex;
    }

@media screen and (max-width: 480px) {
  header {
      justify-content: center; /* Centers the logo on small screens */
  }

  form {
    margin: 1em;
  }

  h2 {
    font-size: 1.3em; /* Size on small screens */
}

  .my-audio-card {
      margin-top: 20px; /* Add some space between the logo and audio card on small screens */
  }

  .my-main-content {
    margin-top: 160px;
  }

  .my-card-content {
    margin-top: 15px;
}

  #mylogo {
    width: 36px;
    /* height: auto; */
    border-radius: 50%;
    margin-bottom: 20;
}

.navbar-brand {
  margin: 0;
  font-size: 15px;
}

.navbar{
  display: flex;
  justify-content: space-between;
}

}

